[package]
name = "tower-actor"
version = "0.1.0"
authors = ["Sam Scott <sam@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
tower-buffer = "0.1.1"
tower-service = "0.2.0"

[dev-dependencies]
tokio = "0.1"
tower = "0.1"